Update center label to 'ERM Vision' and replace vision subtext per content

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <div class="diagram">
           <div class="ring" aria-hidden="true"></div>
 
-          <div class="vision-center" role="img" aria-label="Vision">
-            <h2>Vision</h2>
+          <div class="vision-center" role="img" aria-label="ERM Vision">
+            <h2>ERM Vision</h2>
             <p><!-- Insert official Vision statement here -->
-              Placeholder text for the university vision statement.
+              Enable all decision makers, including the Board of Trustees, faculty, management, operational staff, and others to identify, assess, and manage risks in a continuously changing and uncertain environment.
             </p>
           </div>
 
