Switch typography to Acumin Pro with fallbacks; add Adobe Fonts embed instructions

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       - The diagram supports both circular layout (desktop/tablet) and stacked layout (mobile).
       - No JavaScript. Pure HTML + CSS for portability across CMS (WordPress/Cascade).
     -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    <!-- If you have an Adobe Fonts (Typekit) kit for Acumin Pro, add it here:
+         <link rel="preconnect" href="https://use.typekit.net" crossorigin>
+         <link rel="stylesheet" href="https://use.typekit.net/XXXXXXX.css">
+         Replace XXXXXXX with your kit ID. -->
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
