--- a/index.html
+++ b/index.html
@@ -41,30 +41,22 @@
 
           <article class="goal goal1" aria-labelledby="goal1-title">
             <h3 id="goal1-title">Goal 1</h3>
-            <p><!-- Replace with Goal 1 description -->
-              Placeholder text for goal 1.
-            </p>
+            <p>Ensure the seamless integration of strategic planning</p>
           </article>
 
           <article class="goal goal2" aria-labelledby="goal2-title">
             <h3 id="goal2-title">Goal 2</h3>
-            <p><!-- Replace with Goal 2 description -->
-              Placeholder text for goal 2.
-            </p>
+            <p>Recognize early warning risk indicators</p>
           </article>
 
           <article class="goal goal3" aria-labelledby="goal3-title">
             <h3 id="goal3-title">Goal 3</h3>
-            <p><!-- Replace with Goal 3 description -->
-              Placeholder text for goal 3.
-            </p>
+            <p>Link decisions with stakeholder values</p>
           </article>
 
           <article class="goal goal4" aria-labelledby="goal4-title">
             <h3 id="goal4-title">Goal 4</h3>
-            <p><!-- Replace with Goal 4 description -->
-              Placeholder text for goal 4.
-            </p>
+            <p>Drive sustainable synergies</p>
           </article>
         </div>
 
