Ensure all text uses Acumin Pro: explicitly set font-family on all text elements (vision center, goals); improve Adobe Fonts setup instructions in HTML

--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
       - The diagram supports both circular layout (desktop/tablet) and stacked layout (mobile).
       - No JavaScript. Pure HTML + CSS for portability across CMS (WordPress/Cascade).
     -->
-    <!-- If you have an Adobe Fonts (Typekit) kit for Acumin Pro, add it here:
-         <link rel="preconnect" href="https://use.typekit.net" crossorigin>
-         <link rel="stylesheet" href="https://use.typekit.net/XXXXXXX.css">
-         Replace XXXXXXX with your kit ID. -->
+    <!-- 
+      Adobe Fonts (Typekit) - Acumin Pro Setup:
+      1. Go to fonts.adobe.com and create/add Acumin Pro to your kit
+      2. Publish your kit and copy the embed code
+      3. Replace the placeholder below with your actual kit link:
+    -->
+    <!-- <link rel="preconnect" href="https://use.typekit.net" crossorigin>
+    <link rel="stylesheet" href="https://use.typekit.net/YOUR_KIT_ID.css"> -->
+    <!-- 
+      Alternative: If you have Acumin Pro installed locally or via another method,
+      ensure the font-family declarations in style.css match your setup.
+    -->
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
